--- a/src/pages/events/Events.css
+++ b/src/pages/events/Events.css
@@ -14,15 +14,15 @@
         font-size: x-large;
         background: inherit;
         color: white;
-        margin-bottom: 10dvh;
+        margin-bottom: 10vh;
     }
     #Events img{
-        width: 90dvw;
+        width: 90vw;
     }
     #Events #event-aimsa-img{
-        width: 60dvw;
-        border-radius: 100dvh;
-        margin: 3dvh; 
+        width: 60vw;
+        border-radius: 100vh;
+        margin: 3vh; 
         background:linear-gradient(to right bottom, darkblue,blue, dodgerblue);
     }
     #Events p{
@@ -33,8 +33,8 @@
         flex-flow: column wrap;
         align-items: center;
         justify-content: center;
-        width: 100dvw;
-        padding: 5dvw;
+        width: 100vw;
+        padding: 5vw;
         background: #000;
     }
 }
