--- a/src/pages/home/homestyles.css
+++ b/src/pages/home/homestyles.css
@@ -1,22 +1,22 @@
 /*  android css  */
 @media screen and (max-width:580px){
     .homepagesections{
-        width: 100dvw;
-        padding: 5dvw;
+        width: 100vw;
         display: flex;
-        flex-flow: column wrap;
-        align-items: center;
+        flex-flow: column;
         justify-content: center;
+        align-items: center;
+        padding: 5vw;
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
 #banner img{
-    height: 50dvh;
-    width: 50dvh;
+    height: 50vh;
+    width: 50vh;
     animation: 1s linear bannerimganimandr;
 }
 @keyframes bannerimganimandr {
     0%{
-        transform: translateX(+50dvh);
+        transform: translateX(+50vh);
         opacity: 0;
     }
 }
@@ -33,23 +33,22 @@
 }
 @keyframes bannerdescrandr {
     0%{
-        transform: translateY(+50dvh);
+        transform: translateY(+50vh);
         opacity: 0;
     }
 }
 #faculties{
     display: grid;
     grid-template-columns: 0.5fr 0.5fr;
-    margin-top: 2dvh;
-    margin-bottom: 2dvh;
+    margin:2vh 0vh 2vh 0vh;
     background: whitesmoke;
-    width: 100dvw;
+    width: 100vw;
 }
 #faculties img{
-    height: 30dvw;
-    width: 30dvw;
-    border-radius: 100dvh;
-    border: 2dvh rgb(34, 97, 255) double;
+    height: 30vw;
+    width: 30vw;
+    border-radius: 100vh;
+    border: 2vh rgb(34, 97, 255) double;
 }
 #faculties figure{
     display: flex;
@@ -58,34 +57,34 @@
     justify-content: center;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: small;
-    padding: 5dvw;
-    margin: 1dvh 0dvh 1dvh 0dvh;
-    border: 1dvh solid white;
+    padding: 5vw;
+    margin: 1vh 0vh 1vh 0vh;
+    border: 1vh solid white;
 }
 #commitee{
     display: flex;
     flex-flow: column wrap;
-    margin: 2dvh 0dvh 2dvh 0dvh;
+    margin: 2vh 0vh 2vh 0vh;
     justify-content: space-evenly;
     align-items: center;
-    margin-top: 2dvh;
-    margin-bottom: 2dvh;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
     background: whitesmoke;
 }
 #commitee img{
-    height: 40dvh;
-    width: 40dvh;
-    border: 3dvh double dodgerblue;
-    border-radius: 100dvh;
+    height: 40vh;
+    width: 40vh;
+    border: 3vh double dodgerblue;
+    border-radius: 100vh;
 }
 #commitee figure {
     display: flex;
     flex-flow: column wrap;
     align-items: center;
     justify-content: space-evenly;
-    padding: 5dvw;
-    margin: 1dvh 0dvh 1dvh 0dvh;
-    border: 1dvh solid white;
+    padding: 5vw;
+    margin: 1vh 0vh 1vh 0vh;
+    border: 1vh solid white;
 }
 /* animation classes of fade in */
 .fade-in{
@@ -93,11 +92,11 @@
 }
 @keyframes fadein {
     0%{
-        transform: translateX(-100dvw);
+        transform: translateX(-100vw);
         opacity: 0;
     }
     100%{
-        transform: translateX(0dvw);
+        transform: translateX(0vw);
         opacity: 100;
     }
 }
